--- a/index.html
+++ b/index.html
@@ -3,18 +3,25 @@
   <head>
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Raleway"
+      href="https://fonts.googleapis.com/css?family=Cantarell"
     />
     <style>
       body {
-        font-family: "Raleway", sans-serif, serif;
+        font-family: "Cantarell", sans-serif, serif;
       }
     </style>
     <title>North Africa Seterras</title>
     <link rel="icon" href="https://cdn.glitch.global/a6e3d2b0-730e-41f3-9fd0-41c6e21d2090/favicon.png?v=1645037311571"/>
   </head>
   <body>
-    This website is depreciated. 
-    <h6 id="moon">Moon</h6>
+    <h1>Africa</h1>
+    <p><a href="bit.ly/norafrica">Countries</a></p>
+    <p><a href="bit.ly/norafricap">Captials</a></p>
+    <p><a href="bit.ly/nafricageo">Physical</a></p>
+    <hr>
+    <h1>East and South Asia</h1>
+    <p><a href="bit.ly/esasiac">Countries</a></p>
+    <p><a href="bit.ly/esasiacap">Capitals</a></p>
+    <p><a href="bit.ly/esasiageo">Physical</a></p>
   </body>
 </html>
