--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       }
     </style>
     <title>North Africa Seterras</title>
-    <link rel="icon" href="https://cdn.glitch.global/a6e3d2b0-730e-41f3-9fd0-41c6e21d2090/favicon.png?v=1645037311571"/>
+    <link rel="icon" href="favicon.png"/>
   </head>
   <body>
     <h1>Africa</h1>
