--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Cantarell"
     />
-    <link rel="stylesheet" href="stylesheet.css"
+    <link rel="stylesheet" href="stylesheet.css">
     <style>
       body {
         font-family: "Cantarell", sans-serif, serif;
