--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
   </head>
   <body>
     <h1>Africa</h1>
-    <p><a href="bit.ly/norafrica">Countries</a></p>
-    <p><a href="bit.ly/norafricap">Captials</a></p>
-    <p><a href="bit.ly/nafricageo">Physical</a></p>
+    <p><a href="https://bit.ly/norafrica">Countries</a></p>
+    <p><a href="https://bit.ly/norafricap">Captials</a></p>
+    <p><a href="https://bit.ly/nafricageo">Physical</a></p>
     <hr>
     <h1>East and South Asia</h1>
-    <p><a href="bit.ly/esasiac">Countries</a></p>
-    <p><a href="bit.ly/esasiacap">Capitals</a></p>
-    <p><a href="bit.ly/esasiageo">Physical</a></p>
+    <p><a href="https://bit.ly/esasiac">Countries</a></p>
+    <p><a href="https://bit.ly/esasiacap">Capitals</a></p>
+    <p><a href="https://bit.ly/esasiageo">Physical</a></p>
   </body>
 </html>
