--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Cantarell"
+    />
+    <link rel="stylesheet" href="stylesheet.css">
+    <style>
+      body {
+        font-family: "Cantarell", sans-serif, serif;
+      }
+    </style>
     <title>North Africa Seterras</title>
     <link rel="icon" href="favicon.png"/>
   </head>
