--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
   <head>
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Cantarell"
-    />
-    <link rel="stylesheet" href="stylesheet.css">
+      href="https://fonts.googleapis.com/css?family=Cantarell"/>
     <style>
       body {
         font-family: "Cantarell", sans-serif, serif;
