--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Cantarell"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cantarell"/>
     <style>
       body {
-        font-family: "Cantarell", sans-serif, serif;
+        font-family: "Cantarell", sans-serif
       }
     </style>
     <title>North Africa Seterras</title>
