--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <!-- hi !-->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cantarell"/>
+     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cantarell">
+    <link rel="stylesheet" href="style.css">
     <style>
       body {
         font-family: "Cantarell", sans-serif
