--- a/index.html
+++ b/index.html
@@ -2,19 +2,24 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css"/>
-    <title>North Africa Seterras</title>
-    <link rel="icon" href="favicon.png"/>
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Cantarell">
+    <style>
+      body {
+        font-family: 'Cantarell', serif;
+      }
+    </style>
   </head>
   <body>
     <h1>Africa</h1>
     <p><a href="https://bit.ly/norafrica">Countries</a></p>
     <p><a href="https://bit.ly/norafricap">Captials</a></p>
     <p><a href="https://bit.ly/nafricageo">Physical</a></p>
-    <hr>
+    <hr />
     <h1>East and South Asia</h1>
     <p><a href="https://bit.ly/esasiac">Countries</a></p>
     <p><a href="https://bit.ly/esasiacap">Capitals</a></p>
     <p><a href="https://bit.ly/esasiageo">Physical</a></p>
   </body>
 </html>
+
