--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Cantarell">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" type="text/css" href="/style.css">
     <style>
       body {
         font-family: 'Cantarell', serif;
