--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         font-family: 'Cantarell', serif;
       }
     </style>
+    <title>Moon's Seterra
   </head>
   <body>
     <h1>Africa</h1>
