--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         font-family: 'Cantarell', serif;
       }
     </style>
-    <title>Moon's Seterra
+    <title>Moon's Seterra</title>
   </head>
   <body>
     <h1>Africa</h1>
