--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
       }
     </style>
     <title>Moon's Seterra</title>
+    <script type="text/javascript">
+    // Wait for document to load
+    document.addEventListener("DOMContentLoaded", function(event) {
+      document.documentElement.setAttribute("data-theme", "dark");
+      });
+    </script>
   </head>
   <body>
     <h1>Africa</h1>
