--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <html lang="en">
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Cantarell">
     <link rel="stylesheet" type="text/css" href="style.css">
