--- a/index.html
+++ b/index.html
@@ -21,15 +21,21 @@
     </script>
   </head>
   <body>
-    <h1>Africa</h1>
+    <header><h1>Africa</h1></header>
+    <nav>
     <p><a href="https://bit.ly/norafrica">Countries</a></p>
     <p><a href="https://bit.ly/norafricap">Captials</a></p>
     <p><a href="https://bit.ly/nafricageo">Physical</a></p>
+    </nav>
     <hr />
-    <h1>East and South Asia</h1>
+    <header><h1>East and South Asia</h1></header>
+    <nav>
     <p><a href="https://bit.ly/esasiac">Countries</a></p>
     <p><a href="https://bit.ly/esasiacap">Capitals</a></p>
     <p><a href="https://bit.ly/esasiageo">Physical</a></p>
+    </nav>
+    <hr />
+    <footer><h6>Moon</h6></footer>
   </body>
 </html>
 
