--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <p><a href="https://bit.ly/esasiageo">Physical</a></p>
     </nav>
     <hr />
-    <footer><h6>Moon</h6></footer>
+    <div class="nopadding"><footer><h6>Moon</h6></footer></div>
   </body>
 </html>
 
