--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
     <p><a href="https://bit.ly/esasiacap">Capitals</a></p>
     <p><a href="https://bit.ly/esasiageo">Physical</a></p>
     </nav>
+    <div class="nopadding">
     <hr />
-    <div class="nopadding"><footer><h6>Moon</h6></footer></div>
+    <footer><h6>Moon</h6></footer></div>
   </body>
 </html>
 
