--- a/index.html
+++ b/index.html
@@ -35,9 +35,8 @@
     <p><a href="https://bit.ly/esasiacap">Capitals</a></p>
     <p><a href="https://bit.ly/esasiageo">Physical</a></p>
     </nav>
-    <div class="nopadding">
     <hr />
-    <footer><h6>Moon</h6></footer></div>
+    <h6>Moon</h6>
   </body>
 </html>
 
