--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 </script>
   </head>
   <body>
+    <button id="theme-switcher">Switch themes!</button>
     <header><h1>Africa</h1></header>
     <p><a href="https://bit.ly/norafrica">Countries</a></p>
     <p><a href="https://bit.ly/norafricap">Captials</a></p>
