--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <html lang="en">
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Cantarell">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css" id="style">
     <link rel="icon" type="image/png" href="favicon.png" />
     <style>
       body {
