--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </style>
     <title>Moon's Seterra</title>
   </head>
-  <body>
+  <body class="dark-theme || light-theme">
     <header><h1>Africa</h1></header>
     <p><a href="https://bit.ly/norafrica">Countries</a></p>
     <p><a href="https://bit.ly/norafricap">Captials</a></p>
