--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
           href="https://fonts.googleapis.com/css?family=Cantarell">
     <link rel="stylesheet" type="text/css" href="style.css" id="style">
     <link rel="icon" type="image/png" href="favicon.png" />
-      <script src="myscripts.js"></script>
+      <script src="script.js"></script>
     <style>
       body {
         font-family: 'Cantarell', serif;
