--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
           href="https://fonts.googleapis.com/css?family=Cantarell">
     <link rel="stylesheet" type="text/css" href="style.css" id="style">
     <link rel="icon" type="image/png" href="favicon.png" />
-      <script src="script.js"></script>
     <style>
       body {
         font-family: 'Cantarell', serif;
@@ -15,7 +14,7 @@
     </style>
     <title>Moon's Seterra</title>
   </head>
-  <body class="dark-theme || light-theme">
+  <body>
     <header><h1>Africa</h1></header>
     <p><a href="https://bit.ly/norafrica">Countries</a></p>
     <p><a href="https://bit.ly/norafricap">Captials</a></p>
