--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <p><a href="https://bit.ly/esasiacap">Capitals</a></p>
     <p><a href="https://bit.ly/esasiageo">Physical</a></p>
     <hr />
+    <header><h1>Japan</h1></header>
+    <p><a href="https://bit.ly/jsetfourislands">Four Main Islands</a></p>
+    <hr />
     <h6>Moon</h6>
   </body>
 </html>
