--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <hr />
     <header><h1>Japan</h1></header>
     <p><a href="https://bit.ly/jsetfourislands">Four Main Islands</a></p>
-    <p><a href="https://bit.ly/jseterrawater">Bodies of Water<a/></p>
+    <p><a href="https://bit.ly/jseterrawater">Bodies of Water</a></p>
     <hr />
     <h6>Moon</h6>
   </body>
