--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="utf-8">
     <html lang="en">
-    <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Cantarell">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cantarell">
     <link rel="stylesheet" type="text/css" href="style.css" id="theme">
     <link rel="icon" type="image/png" href="favicon.png" />
     <style>
