--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <p><a href="https://bit.ly/esasiageo">Physical</a></p>
     <hr />
     <header><h1>Japan</h1></header>
+    <p><a href="https://bit.ly/jseterrac">Cities</a></p>
     <p><a href="https://bit.ly/jsetfourislands">Four Main Islands</a></p>
     <p><a href="https://bit.ly/jseterrawater">Bodies of Water</a></p>
     <hr />
