--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <header><h1>Japan</h1></header>
     <p><a href="https://bit.ly/jseterrac">Cities</a></p>
     <p><a href="https://bit.ly/jsetfourislands">Four Main Islands</a></p>
+    <p><a href="https://bit.ly/jseterramtn">Mountains</a></p>
     <p><a href="https://bit.ly/jseterrawater">Bodies of Water</a></p>
     <hr />
     <h6>Moon</h6>
