--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
     <p><a href="https://bit.ly/jseterramtn">Mountains</a></p>
     <p><a href="https://bit.ly/jseterrawater">Bodies of Water</a></p>
     <hr />
+    <header><h1>Spanish Speaking Countries (Spanish Class)</h1></header>
+    <p><a href="https://bit.ly/enescoun">In English</a></p>
+    <p><a href="https://bit.ly/esescoun">In Spanish</a></p>
+    <hr />
     <h6>Moon</h6>
   </body>
 </html>
