--- a/index.html
+++ b/index.html
@@ -15,24 +15,28 @@
   </head>
   <body>
     <header><h1>Africa</h1></header>
-    <p><a href="https://bit.ly/norafrica">Countries</a></p>
+    <p><a href="https://www.geoguessr.com/seterra/en/vgp/3163?c=TG6AT">Countries</a></p>
     <p><a href="https://bit.ly/norafricap">Captials</a></p>
     <p><a href="https://bit.ly/nafricageo">Physical</a></p>
     <hr />
     <header><h1>East and South Asia</h1></header>
-    <p><a href="https://bit.ly/esasiac">Countries</a></p>
-    <p><a href="https://bit.ly/esasiacap">Capitals</a></p>
-    <p><a href="https://bit.ly/esasiageo">Physical</a></p>
+    <p><a href="https://www.geoguessr.com/seterra/en/vgp/3167?c=EYMA7">Countries</a></p>
+    <p><a href="https://www.geoguessr.com/seterra/en/vgp/3203?c=KSUHN">Capitals</a></p>
+    <p><a href="https://www.geoguessr.com/seterra/en/vgp/3454?c=SAZWF">Physical</a></p>
     <hr />
     <header><h1>Japan</h1></header>
-    <p><a href="https://bit.ly/jseterrac">Cities</a></p>
-    <p><a href="https://bit.ly/jsetfourislands">Four Main Islands</a></p>
+    <p><a href="https://www.geoguessr.com/seterra/en/vgp/3636?c=TV7XR">Cities</a></p>
+    <p><a href="https://www.geoguessr.com/seterra/en/vgp/3986?c=X7676">Four Main Islands</a></p>
     <p><a href="https://bit.ly/jseterramtn">Mountains</a></p>
-    <p><a href="https://bit.ly/jseterrawater">Bodies of Water</a></p>
+    <p><a href="https://www.geoguessr.com/seterra/en/vgp/3986?c=BKSRL">Bodies of Water</a></p>
     <hr />
     <header><h1>Spanish Speaking Countries (Spanish Class)</h1></header>
-    <p><a href="https://bit.ly/enescoun">In English</a></p>
+    <p><a href="https://www.geoguessr.com/seterra/en/vgp/3153?c=GGLHG">In English</a></p>
     <p><a href="https://bit.ly/esescoun">In Spanish</a></p>
+    <hr />
+    <header><h1>Central America</h1></header>
+    <p><a href="https://www.geoguessr.com/seterra/en/vgp/3217?c=6VBN3">Countries + Waterways</a></p>
+    <p>Capitals coming soon</p>
     <hr />
     <h6>Moon</h6>
   </body>
