--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <hr />
     <header><h1>Central America</h1></header>
     <p><a href="https://www.geoguessr.com/seterra/en/vgp/3217?c=6VBN3">Countries + Waterways</a></p>
-    <p>Capitals coming soon</p>
+    <p><a href="https://www.geoguessr.com/seterra/en/vgp/3266?c=CY4H4">Capitals</a></p>
     <hr />
     <h6>Moon</h6>
   </body>
